<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaSecundaria">

    <TextView
        android:id="@+id/msgTreino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mstreino"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_C"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/botaoVoltar"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/voltar"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/botao_A"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:text="@string/a"
        app:layout_constraintEnd_toStartOf="@+id/botao_B"
        app:layout_constraintTop_toBottomOf="@+id/text_quarta" />

    <Button
        android:id="@+id/botao_B"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:text="@string/b"
        app:layout_constraintEnd_toStartOf="@+id/botao_C"
        app:layout_constraintTop_toBottomOf="@+id/text_quarta" />

    <Button
        android:id="@+id/botao_C"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quarta"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/botao_D"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/d"
        app:layout_constraintStart_toEndOf="@+id/botao_C"
        app:layout_constraintTop_toBottomOf="@+id/text_quarta" />

    <Button
        android:id="@+id/botao_E"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/e"
        app:layout_constraintStart_toEndOf="@+id/botao_D"
        app:layout_constraintTop_toBottomOf="@+id/text_quarta" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/text_segunda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="8dp"
        android:text="@string/segunda"
        app:layout_constraintEnd_toStartOf="@+id/text_terca"
        app:layout_constraintTop_toBottomOf="@+id/text_principal" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/text_terca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ter_a"
        app:layout_constraintEnd_toStartOf="@+id/text_quarta"
        app:layout_constraintTop_toBottomOf="@+id/text_principal" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/text_quarta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/quarta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_principal"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/text_quinta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:text="@string/quinta"
        app:layout_constraintStart_toEndOf="@+id/text_quarta"
        app:layout_constraintTop_toBottomOf="@+id/text_principal" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/text_sexta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="41dp"
        android:text="@string/sexta"
        app:layout_constraintStart_toEndOf="@+id/text_quinta"
        app:layout_constraintTop_toBottomOf="@+id/text_principal" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/text_sabado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="41dp"
        android:text="@string/s_bado"
        app:layout_constraintStart_toEndOf="@+id/text_sexta"
        app:layout_constraintTop_toBottomOf="@+id/text_principal" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/text_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treino_semanal"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:textColor="#000000"
        android:id="@+id/text_domingo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/domingo"
        app:layout_constraintEnd_toStartOf="@+id/text_segunda"
        app:layout_constraintTop_toBottomOf="@+id/text_principal" />

    <Button
        android:id="@+id/botao_domingo"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Vazio"
        app:layout_constraintEnd_toStartOf="@+id/botao_A"
        app:layout_constraintTop_toBottomOf="@+id/text_quarta" />

    <Button
        android:id="@+id/botao_X"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/x"
        app:layout_constraintStart_toEndOf="@+id/botao_E"
        app:layout_constraintTop_toBottomOf="@+id/text_quarta" />


</androidx.constraintlayout.widget.ConstraintLayout>