<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/menu_de_op_es"
        android:textSize="20sp"
        tools:layout_editor_absoluterX="8dp"
        tools:layout_editor_absoluterY="8dp" />

    <Button
        android:id="@+id/botao01"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:text="@string/botao1" />

    <Button
        android:id="@+id/botao02"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:text="@string/botao2" />


</LinearLayout>

